- 13: Issue #890: Several improvements of the Turtleizer GUI (#704/#880) <2>
- 13: Issue #891: Dutch locale fixed, revised, and completed <Jaap Woldringh>
- 13: Bugfix #892: "Save as" and double-click trouble with arranged diagrams <2>
- 13: Enh. #893: Translator preview indication in language preference menu <2>
- 13: Bugfix #894: Wrong mechanism to fit the Turtleizer picture into canvas <2>
- 13: Enh. #896: Different cursor on readiness for moving diagrams in Arranger <2>
- 13: Bugfix #897: Numeric degradation and endless loop risk in Turtleizer <2>
- 13: Bugfix #898: Turtleizer function pre-evaluation caused syntax errors <2>

Version: 3.30 (2019-10-06)
- 01: Issue #657: Spanish message in German locale replaced <2>
- 01: Enh. #662/1: Info box for groups redesigned into a tree view <2>
- 01: Enh. #662/2: Group visualisation with individual colours in Arranger <2>
- 01: Enh. #662/3: Arranger popup menu item to rearrange diagrams by groups <2>
- 01: Enh. #662/4: Option to save arrangements with relative coordinates <2>
- 01: Bugfix #664: Incorrect handling of modified diagrams on closing Arranger <2>
- 01: Bugfix #664: Disambiguated cancelling in AUTO_SAVE_ON_CLOSE mode <2>
- 01: Bugfix #515: Defective diagram positioning in Arranger mended <2>
- 02: Bugfix #665: Import of INSPECT statements from COBOL actually works now <2>
- 02: Bugfix #655: Arranger popup menu revised (item order, accelerator info) <2>
- 02: Bugfix #667: Removal of diagrams from Arranger could leave remnants <2>
- 02: Issue #668: Group association behaviour on outsourcing further improved <2>
- 02: Bugfix #669: C export of FOR-IN loops with traversed strings was defective <2>
- 02: Bugfix #670: Diagram/group info box of Arranger index not reliably scaled <2>
- 02: Issue #670: Live look & feel switch failed for Diagram/group info box <2>
- 03: Bugfix #672: Default group was named null.arr after cancelled save attempt <2>